<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Age"
    android:background="#C8E2EB">

    <TextView
        android:id="@+id/questionAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_age"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">
        <RadioButton
            android:id="@+id/from18to25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18_25"/>
        <RadioButton
            android:id="@+id/from25to40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25_40"/>
        <RadioButton
            android:id="@+id/from40to50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40_50"/>
        <RadioButton
            android:id="@+id/from50to70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50_70"/>
        <RadioButton
            android:id="@+id/from70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_70"/>
            
    </RadioGroup>

    <Button
        android:id="@+id/nextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toTemperature"
        android:text="@string/next_q"
        android:textSize="16sp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        />


</androidx.constraintlayout.widget.ConstraintLayout>